fix funcionalty
