# src/main/java/com/example/productapi/dto/ErrorResponse.java
@@ -1,14 +1,19 @@
 
 package com.example.productapi.dto;
 
+
 import lombok.AllArgsConstructor;
 import lombok.Getter;
+import lombok.NoArgsConstructor;
 import lombok.Setter;
+import lombok.Builder;
 
 @Getter
 @Setter
 @AllArgsConstructor
-public class ErrorResponse {
+@NoArgsConstructor
+@Builder
+public class ErrorResponse extends RuntimeException {
     private int status;
     private String error;
     private String message;
