# src/main/java/com/example/productapi/exception/GlobalExceptionHandler.java
@@ -11,6 +11,9 @@ import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ResponseStatus;
+import org.springframework.web.context.request.WebRequest;
+import org.springframework.web.server.ServerWebExchange;
+import reactor.core.publisher.Mono;
 
 import java.util.HashMap;
 import java.util.Map;
@@ -30,6 +33,29 @@ public class GlobalExceptionHandler {
     public ResponseEntity<ErrorResponse> handleProductNotFoundException(ProductNotFoundException ex) {
         ErrorResponse errorResponse = new ErrorResponse(HttpStatus.NOT_FOUND.value(), "Product Not Found", ex.getMessage());
         return new ResponseEntity<>(errorResponse, HttpStatus.NOT_FOUND);
+    }
+
+    /*@ExceptionHandler(CategoryNotFoundException.class)
+    @ResponseStatus(HttpStatus.NOT_FOUND)
+    public ResponseEntity<ErrorResponse> handleCategoryNotFoundException(CategoryNotFoundException ex) {
+        ErrorResponse errorResponse = new ErrorResponse(HttpStatus.NOT_FOUND.value(), "Category Not Found", ex.getMessage());
+        return new ResponseEntity<>(errorResponse, HttpStatus.NOT_FOUND);
+    }*/
+
+    /*@ExceptionHandler(CategoryNotFoundException.class)
+    public Mono<ResponseEntity<ErrorResponse>> handleCategoryNotFoundException(CategoryNotFoundException e, ServerWebExchange exchange) {
+        ErrorResponse errorResponse = new ErrorResponse(HttpStatus.NOT_FOUND.value(), "Category Not Found", e.getMessage());
+        return Mono.just(ResponseEntity.status(HttpStatus.NOT_FOUND).body(errorResponse));
+    }*/
+
+
+    @ExceptionHandler(ErrorResponse.class)
+    public ResponseEntity<Map<String, Object>> handleErrorResponse(ErrorResponse ex) {
+        Map<String, Object> response = new HashMap<>();
+        response.put("status", ex.getStatus());
+        response.put("error", ex.getError());
+        response.put("message", ex.getMessage());
+        return new ResponseEntity<>(response, HttpStatus.valueOf(ex.getStatus()));
     }
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
